--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Video</h1>
+<br>
+
+<h1 class="title">
+    Novo Vídeo
+</h1>
 
 <%= render 'form', video: @video %>
 
-<%= link_to 'Back', videos_path %>
+<br>
+
+<div class="control">
+    <%= link_to 'Voltar', videos_path, class: "button is-default" %>
+</div>
