--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="container is-fluid">
     <%= render "shared/menu" %>
     <% if notice %>
       <p class="notification is-warning"><%= notice %></p>
