--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,13 @@
-<%= content_for(:title, t("views.app_name") + " | " + t("views.users.editing")) %>
+<br>
 
-<div class="row">
-    <div class="col-md-12">
-        <h1><%= t("views.users.editing") %></h1>
-    </div>
-</div>
+<h1 class="title">
+    Editar Usuário
+</h1>
 
-<div class="row">
-    <div class="col-md-12">
-        <%= render 'form', user: @user %>
-    </div>
-</div>
+<%= render 'form', user: @user %>
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-12">
-                <%= link_to t("views.back"), users_path, class: "btn btn-default" %>
-            </div>
-        </div>
-    </div>
+<br>
+
+<div class="control">
+    <%= link_to 'Voltar', users_path, class: "button is-default" %>
 </div>
