--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -16,13 +16,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div class="control">
+      <%= f.label :name, class: "label" %>
+      <%= f.text_field :name, class: 'input', placeholder: "Nome" %>
+    </div>
   </div>
 
   <div class="field">
-    <%= f.label :url %>
-    <%= f.text_field :url %>
+    <div class="control">
+      <%= f.label :url, class: "label" %>
+      <%= f.text_field :url, class: 'input', placeholder: "Url" %>
+    </div>
   </div>
 
   <div class="actions">
