--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Video</h1>
+<br>
+
+<h1 class="title">
+    Editar Vídeo
+</h1>
 
 <%= render 'form', video: @video %>
 
-<%= link_to 'Show', @video %> |
-<%= link_to 'Back', videos_path %>
+<br>
+
+<div class="control">
+    <%= link_to 'Voltar', videos_path, class: "button is-default" %>
+</div>
