--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,26 +1,40 @@
-<p id="notice"><%= notice %></p>
+<%= content_for(:title, t("views.app_name") + " | " + "Videos") %>
 
-<h1>Videos</h1>
+<br>
 
-<table>
+<div class="box">
+  <h1 class="title">
+    Vídeos
+    <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+  </h1>
+</div>
+
+<div class="pagination">
+  <%= paginate @videos %>
+</div>
+
+<br>
+
+<table class="table is-striped is-bordered is-fullwidth">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Url</th>
-      <th>User</th>
-      <th colspan="3"></th>
+      <th>#</th>
+      <th><%= "Nome" %></th>
+      <th><%= "Url" %></th>
+      <th><%= "Usuário" %></th>
+      <th class="has-text-centered" colspan="3"><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
-    <% @videos.each do |video| %>
-      <tr>
+    <% @videos.each_with_index do |video, index| %>
+     <tr>
+        <td><%= index+1 %></td>
         <td><%= video.name %></td>
         <td><%= video.url %></td>
         <td><%= video.user.email if video.user.present? %></td>
-        <td><%= link_to 'Show', video %></td>
-        <td><%= link_to 'Edit', edit_video_path(video) %></td>
-        <td><%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', video, class: "button is-warning" %></td>
+        <td><%= link_to 'Edit', edit_video_path(video), class: "button is-info" %></td>
+        <td><%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' }, class: "button is-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +42,15 @@
 
 <br>
 
-<%= link_to 'New Video', new_video_path %>
+<div class="pagination">
+  <%= paginate @videos %>
+</div>
+
+<br>
+
+<div class="box">
+  <h1 class="title">
+    Vídeos
+    <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+  </h1>
+</div>
