:point_right: styles, video player, locale

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,17 @@
-<h1 class="title">Seja bem-vindo</h1>
+<div class="container is-fluid">
+  <br>
 
-<p>Confira nossa lista de vídeos:</p>
+  <h1 class="title">Seja bem-vindo</h1>
 
-<% @videos.each do |video| %>
-  <div class="card">
-    <div class="card-content">
-      <p>Nome: <%= video.name %></p>
-      <p>Usuário: <%= video.user.email %></p>
-      <%= link_to 'Show', video %>
+  <p>Confira nossa lista de vídeos:</p>
+
+  <% @videos.each do |video| %>
+    <div class="card">
+      <div class="card-content">
+        <p>Nome: <%= video.name %></p>
+        <p>Usuário: <%= video.user.email %></p>
+        <%= link_to 'Show', video %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
