--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,15 @@
-<br>
+<div class="container is-fluid">
+  <br>
 
-<h1 class="title">
-    Editar Usuário
-</h1>
+  <h1 class="title">
+      Editar Usuário
+  </h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
 
-<br>
+  <br>
 
-<div class="control">
-    <%= link_to 'Voltar', users_path, class: "button is-default" %>
+  <div class="control">
+      <%= link_to 'Voltar', users_path, class: "button is-default" %>
+  </div>
 </div>
