--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,13 +1,15 @@
-<br>
+<div class="container is-fluid">
+  <br>
 
-<h1 class="title">
-    Novo Vídeo
-</h1>
+  <h1 class="title">
+      Novo Vídeo
+  </h1>
 
-<%= render 'form', video: @video %>
+  <%= render 'form', video: @video %>
 
-<br>
+  <br>
 
-<div class="control">
-    <%= link_to 'Voltar', videos_path, class: "button is-default" %>
+  <div class="control">
+      <%= link_to 'Voltar', videos_path, class: "button is-default" %>
+  </div>
 </div>
