--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="container is-fluid">
+  <body>
     <%= render "shared/menu" %>
     <% if notice %>
       <p class="notification is-warning"><%= notice %></p>
@@ -22,6 +22,7 @@
       <p class="notification is-danger"><%= alert %></p>
     <% end %>
     <%= yield %>
+    <%= render "shared/footer" %>
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
