--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,54 +1,56 @@
 <%= content_for(:title, t("views.app_name") + " | " + "Usuários") %>
 
-<br>
+<div class="container is-fluid">
+  <br>
 
-<div class="box">
-  <h1 class="title">
-    Usuários
-    <%= link_to 'Novo Usuário', new_user_path, class: "button is-primary is-pulled-right" %>
-  </h1>
-</div>
+  <div class="box">
+    <h1 class="title">
+      Usuários
+      <%= link_to 'Novo Usuário', new_user_path, class: "button is-primary is-pulled-right" %>
+    </h1>
+  </div>
 
-<div class="pagination">
-  <%= paginate @users%>
-</div>
+  <div class="pagination">
+    <%= paginate @users%>
+  </div>
 
-<br>
+  <br>
 
-<table class="table is-striped is-bordered is-fullwidth">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th><%= "Email" %></th>
-      <th class="has-text-centered" colspan="3"><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each_with_index do |user, index| %>
-        <tr>
-          <td><%= index+1 %></td>
-          <td><%= user.email %></td>
-          <td><%= link_to t("views.show"), user, class: "button is-warning" %></td>
-          <td><%= link_to t("views.edit"), edit_user_path(user), class: "button is-info" %></td>
-          <td>
-            <%= link_to t("views.destroy"), user, method: :delete, data: { confirm: t("views.are_you_sure") }, class: "button is-danger" %>
-          </td>
-        </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table is-striped is-bordered is-fullwidth">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th><%= "Email" %></th>
+        <th class="has-text-centered" colspan="3"><%=t '.actions', :default => t("helpers.actions") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each_with_index do |user, index| %>
+          <tr>
+            <td><%= index+1 %></td>
+            <td><%= user.email %></td>
+            <td><%= link_to t("views.show"), user, class: "button is-warning" %></td>
+            <td><%= link_to t("views.edit"), edit_user_path(user), class: "button is-info" %></td>
+            <td>
+              <%= link_to t("views.destroy"), user, method: :delete, data: { confirm: t("views.are_you_sure") }, class: "button is-danger" %>
+            </td>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<div class="pagination">
-  <%= paginate @users%>
-</div>
+  <div class="pagination">
+    <%= paginate @users%>
+  </div>
 
-<br>
+  <br>
 
-<div class="box">
-  <h1 class="title">
-    Usuários
-    <%= link_to 'Novo Usuário', new_user_path, class: "button is-primary is-pulled-right" %>
-  </h1>
+  <div class="box">
+    <h1 class="title">
+      Usuários
+      <%= link_to 'Novo Usuário', new_user_path, class: "button is-primary is-pulled-right" %>
+    </h1>
+  </div>
 </div>
