--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="control">
+    <%= f.submit class: "button is-success" %>
   </div>
 <% end %>
