--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,36 +1,44 @@
 <%= content_for(:title, t("views.app_name") + " | " + t("views.users.show")) %>
 
-<br>
+<div class="container is-fluid">
+  <br>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <strong><%= t("views.users.show") %>:</strong>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <strong><%= t("views.users.show") %>:</strong>
+    </div>
+    <div class="box">
+      <div class="columns">
+        <div class="column is-full">
+          <video-js id=vid1 width="100" height="320" class="vjs-default-skin" controls>
+            <source src="<%= @video.url %>" type="application/x-mpegURL">
+          </video-js>
+        </div>
+      </div>
+
+      <div class="columns">
+        <div class="column is-6">
+          <%= @video.name %>
+        </div>
+        <div class="column is-6">
+          <%= "Views" %>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="columns">
+        <div class="column is-full">
+          <%= @video.user.email if @video.user.present? %>
+        </div>
+      </div>
+    </div>
   </div>
+
   <div class="box">
-    <p>
-      <strong>Name:</strong>
-      <%= @video.name %>
-    </p>
-
-    <p>
-      <strong>Url:</strong>
-      <%= @video.url %>
-    </p>
-
-    <p>
-      <strong>User:</strong>
-      <%= @video.user.email if @video.user.present? %>
-    </p>
+    <% if can? :update, @video %>
+      <%= link_to t("views.edit"), edit_video_path(@video), class: "button is-info" %> |
+    <% end -%>
+    <%= link_to t("views.back"), videos_path, class: "button is-default" %>
   </div>
 </div>
-
-<div class="box">
-  <%= link_to t("views.edit"), edit_video_path(@video), class: "button is-info" %> |
-  <%= link_to t("views.back"), videos_path, class: "button is-default" %>
-</div>
-
-<video-js id=vid1 width=300 height=300 class="vjs-default-skin" controls>
-  <source
-     src="https://content.jwplatform.com/manifests/yp34SRmf.m3u8"
-     type="application/x-mpegURL">
-</video-js>
