--- a/app/assets/stylesheets/bootstrap-footer-sticky.css
+++ b/app/assets/stylesheets/bootstrap-footer-sticky.css
@@ -8,5 +8,6 @@ body {
 }
 
 footer {
-  margin-top: 20px;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  margin-top: 75px;
 }
