--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,6 @@
  *= require_self
  */
 
-@import "bulma/bulma";
+@import "bulma";
 @import "@fortawesome/fontawesome-free/css/all.css";
 @import "video.js/dist/video-js.min.css";
