--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,12 +5,18 @@
 
   <p>Confira nossa lista de vídeos:</p>
 
-  <% @videos.each do |video| %>
+  <% if @videos.each do |video| %>
     <div class="card">
       <div class="card-content">
         <p>Nome: <%= video.name %></p>
         <p>Usuário: <%= video.user.email %></p>
         <%= link_to 'Show', video %>
+      </div>
+    </div>
+  <% end.empty? %>
+    <div class="card">
+      <div class="card-content">
+        <h1 class="title has-text-centered">Nada cadastrado ainda :/</h1>
       </div>
     </div>
   <% end %>
