--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,21 @@
 <footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
-    </p>
+  <div class="has-text-centered">
+    <div class="columns">
+      <div class="column">
+        <%= t('views.app_name') %>
+      </div>
+      <div class="column">
+        <a href="https://github.com/RuanAyram/videos_on_demand">
+          <span class="icon is-large">
+            <i class="fab fa-github fa-2x"></i>
+          </span>
+        </a>
+        <a href="https://ruankaylo.netlify.com/">
+          <span class="icon is-large">
+            <i class="fas fa-globe fa-2x"></i>
+          </span>
+        </a>
+      </div>
+    </div>
   </div>
 </footer>
