--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Forgot your password?</h2>
+<div id="login">
+    <div class="login-card">
+        <div class="card-title">
+            <h1><%= t('views.app_name')%> - Recuperar Senha </h1>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="content">
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", placeholder:"Email"%>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                <div class="actions">
+                <%= f.submit "Envie-me as instruções", class: "btn-login btn-lg btn-primary"%>
+                </div>
+            <% end %>
+            <%= render "devise/shared/links" %>
+        </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
