:point_right: adjustment home_index, seeds user_model

--- a/app/assets/stylesheets/bootstrap-footer-sticky.css
+++ b/app/assets/stylesheets/bootstrap-footer-sticky.css
@@ -11,3 +11,7 @@ footer {
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   margin-top: 75px;
 }
+
+.container {
+  padding: 0 15px;
+}
