--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -6,7 +6,9 @@
   <div class="box">
     <h1 class="title">
       Vídeos
-      <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+      <% if user_signed_in? %>
+        <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+      <% end -%>
     </h1>
   </div>
 
@@ -52,7 +54,9 @@
   <div class="box">
     <h1 class="title">
       Vídeos
-      <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+      <% if user_signed_in? %>
+        <%= link_to 'Novo Vídeo', new_video_path, class: "button is-primary is-pulled-right" %>
+      <% end -%>
     </h1>
   </div>
 </div>
