--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,11 +1,11 @@
-<%= content_for(:title, t("views.app_name") + " | " + t("views.users.show")) %>
+<%= content_for(:title, t("views.app_name") + " | " + t("views.videos.show")) %>
 
 <div class="container is-fluid">
   <br>
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <strong><%= t("views.users.show") %>:</strong>
+      <strong><%= t("views.videos.show") %>:</strong>
     </div>
     <div class="box">
       <div class="columns">
