--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -21,7 +21,7 @@
           <%= @video.name %>
         </div>
         <div class="column is-6">
-          <%= "Views" %>
+          <%= @all_views %>
         </div>
       </div>
 
