--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,12 +5,12 @@
         <%= t('views.app_name') %>
       </div>
       <div class="column">
-        <a href="https://github.com/RuanAyram/videos_on_demand">
+        <a href="https://github.com/RuanAyram/videos_on_demand" target="_blank">
           <span class="icon is-large">
             <i class="fab fa-github fa-2x"></i>
           </span>
         </a>
-        <a href="https://ruankaylo.netlify.com/">
+        <a href="https://ruankaylo.netlify.com/" target="_blank">
           <span class="icon is-large">
             <i class="fas fa-globe fa-2x"></i>
           </span>
