--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -21,7 +21,7 @@
           <%= @video.name %>
         </div>
         <div class="column is-6">
-          <%= @all_views %>
+          <span class="tag is-success is-medium"><%= pluralize(@all_views, 'view', 'views') %></span>
         </div>
       </div>
 
